--- a/index.html
+++ b/index.html
@@ -273,12 +273,13 @@ html {
 </div>
 
 <div class="row">
-  <div class="col-3 menu">
+  <div class="col-2 menu">
     <ul>
-      <li>The Flight</li>
-      <li>The City</li>
-      <li>The Island</li>
-      <li></li>
+      <li><marquee behavior="slide" direction="up"  style="width:100px;height:100px;"> For Latest events updates here!!.</marquee></li>
+      <li><marquee behavior="slide" direction="up"  style="width:100px;height:100px;"> For Latest events updates here!!.</marquee></li>
+      <li><marquee behavior="slide" direction="up"  style="width:100px;height:100px;"> For Latest events updates here!!.</marquee></li>
+      <li><marquee behavior="slide" direction="up"  style="width:100px;height:100px;"> For Latest events updates here!!.</marquee></li>
+      <li><marquee behavior="slide" direction="up"  style="width:100px;height:100px;"> For Latest events updates here!!.</marquee></li>
     </ul>
   </div>
 
