--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>	
-<style> 
+<head>
+  <meta charset="utf-8">
+  <style></style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 #example1 {
   background: url(fg.jpg) right bottom no-repeat, url(fg.jpg) left top repeat;
   padding: 15px;
