--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
+  <style>
+  margin-right: 150px;
+  margin-left: 180px;
+}
+</style>
 <style>
 h1 {
   color: gold;
