--- a/index.html
+++ b/index.html
@@ -8,21 +8,14 @@
 }
 </style>
 <style>
-  margin-right: 150px;
+{
+margin-top: 25px;
+margin-bottom: 25px;
+  margin-right: 50px;
   margin-left: 80px;
 }
 </style>
-<style>
-html { 
-  background-color: "; 
-  background-size: cover;
-}
-
-body { 
-  color: white; 
-}
-</style>
-<title>Nellai varadharaja temple</title>
+<title>varadharaja perumal</title>
 <style> 
 #example1 {
   background-image: url(), url(.jpg);
@@ -44,7 +37,7 @@ text-shadow: 2px 2px 4px #000000;
 p  {
   color: white;
   font-family: courier;
-  font-size: 100%;
+  font-size: 90%;
 text-align: center;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -194,10 +187,10 @@ body{
 <title>GALLERY</title>
     <style>
     #blink{
-      font-size: 30px;
+      font-size: 25px;
       font-weight: bold;
       font-family: sans-serif;
-      color: #1c87c9;
+      color: #ffcc00;
       transition:0.2s;
     }
    </style>
@@ -252,8 +245,8 @@ html {
 }
 
 .menu li {
-  padding: 8px;
-  margin-bottom: 150px;
+  padding: 2px;
+  margin-bottom: 15px;
   background-color: #33b5e5;
   color: #ffffff;
   box-shadow: 0 11px 10px rgba(0,0,0,0.12), 0 11px 22px rgba(0,0,0,0.24);
@@ -269,55 +262,3 @@ html {
 <div class="header">
    <a href="live.html"><h1>Live Dharshan</h1></a>
 </div>
-
-
-
-  <div class="col-9">
-    <h1>Varadharaja perumal</h1>
-    <p>"srI lakshmi vallabhArambhAm viKhanO muni madhyamAm |
-         asmadAchArya paryantAm vandE guru paramparAm ||"</p>
-    <p></p>
-</div>
-
-<style>
-html { 
-  background-color: green; 
-  background-size: cover;
-}
-</style>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-.row {
-  display: flex;
-}
-
-/* Create three equal columns that sits next to each other */
-.column {
-  flex: 10.33%;
-  padding: 3px;
-}
-</style>
-</head>
-<body>
-
-<h2></h2>
-<p></p>
-
-<div class="row">
-  <div class="column">
-    <img src="varadha1.jpg" alt="varadha1.jpg" style="width:360px;height:380px;">
-  </div>
-  <div class="column">
-    <img src="varadha.jpg" alt="varadha.jpg" style="width:360px;height:380px;">
-  </div>
-  <div class="column">
-    <img src="sv1.jpg" alt="sv1.jpg" style="width:360px;height:380px;">
-  </div>
-</div>
-
-</body>
-</html>
