--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 }
 </style>
 <style>
+div class
+{
+margin-top: 25px;
+margin-bottom: 25px;
+  margin-right: 50px;
+  margin-left: 80px;
+}
+<style>
 {
 margin-top: 25px;
 margin-bottom: 25px;
@@ -261,4 +269,10 @@ html {
 
 <div class="header">
    <a href="live.html"><h1>Live Dharshan</h1></a>
+</div>
+<div class="col-9">
+    <h1>Varadharaja perumal</h1>
+    <p>"srI lakshmi vallabhArambhAm viKhanO muni madhyamAm |
+         asmadAchArya paryantAm vandE guru paramparAm ||"</p>
+    <p></p>
 </div>
