--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ margin-bottom: 25px;
   margin-left: 80px;
 }
 </style>
-<title>varadharaja perumal</title>
+<title>Nellai Varadharaja Perumal Kovil</title>
 <style> 
 #example1 {
   background-image: url(), url(.jpg);
@@ -191,6 +191,20 @@ body{
 
 </style>
 </style>
+                 <!DOCTYPE html>
+<html>
+<body>
+
+<?php
+echo(strftime("%B %d %Y, %X %Z",mktime(20,0,0,12,31,98))."<br>");
+
+setlocale(LC_ALL,"hu_HU.UTF8");
+echo(strftime("%Y. %B %d. %A. %X %Z"));
+?>
+
+</body>
+</html>
+
 <head>
 <title>GALLERY</title>
     <style>
