--- a/index.html
+++ b/index.html
@@ -363,11 +363,7 @@ text-align: center;
 
 <div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="varadha1.jpg" style="width:640px;height:340px;">
-  <div class="text">Caption Text</div>
-</div>
+
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
@@ -380,31 +376,6 @@ text-align: center;
   <img src="sv1.jpeg" style="width:640px;height:340px;">
   <div class="text">Caption Two</div>
 </div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="000 (5).jpeg" style="width:640px;height:340px;">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="annam.jpeg" style="width:640px;height:340px;">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="111 (6).jpeg" style="width:540px;height:340px;">
-  <div class="text">Caption Two</div>
-</div>
-
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="222 (7).jpeg" style="width:640px;height:340px;">
-  <div class="text"></div>
-</div>
-
 </div>
 <br>
 
@@ -437,4 +408,316 @@ function showSlides() {
 </script>
 
 <hr style="height:2px;border-width:0;color:gray;background-color:white">
-    
+     <div class="contentBox">
+    	<div class="innerBox">
+        	<h1>About Temple</h1>
+
+
+          <div class="contentText">
+            <p>Sri Varadharaja Perumal temple is situated in Tirunelveli District, Found at the southern end of Tamil Nadu. This temple is an ancient and reputed Vishnu temple. It lies on the banks of the perennial river Thamarabarani. This area is also known as Veeraraghavapuram, which is the hoary name of this place. It has been named after Veeraraghavan, the main and preceding deity (Moolavar), in Sri Varadharaja Temple. Sri Varadharaja perumal is the Usthava Moorthy. </a></p>
+            <br />
+
+<hr style="height:2px;border-width:0;color:gray;background-color:white">
+
+<meta name="viewport" content="width=1300" initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 100%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+</style>
+</head>
+<body>
+
+
+<div style="text-align:center">
+  <h1>Rajagopuram</h1>
+<meta name="viewport" content="width="1300px" initial-scale=1.0">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 100%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+</style>
+</head>
+<body>
+
+<div style="text-align:center">
+  <h2></h2>
+  <p></p>
+</div>
+
+<!-- The four columns -->
+<div class="row">
+  <div class="column">
+    <img src="thoon.jpeg" alt="Nature" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="r1.jpeg" alt="Snow" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="gop3.jpeg" alt="Mountains" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="gop4.jpeg" alt="Lights" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+</div>
+
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div>
+
+<script>
+function myFunction(imgs) {
+  var expandImg = document.getElementById("expandedImg");
+  var imgText = document.getElementById("imgtext");
+  expandImg.src = imgs.src;
+  imgText.innerHTML = imgs.alt;
+  expandImg.parentElement.style.display = "block";
+}
+</script>
+        
+  <p>Five tiers Rajagopuram was successfully built and also big mahamandapam with four giant saptaswara pillars was built by replacing the old 16 pillars mandapam the samprokshana took place on 29 May 2013 Wednesday. Thousands of devotees were witnessed it.</p>
+</div>
+
+<!-- The four columns -->
+<div class="row">
+  <div class="column">
+    <img src="001.jpg" alt="Nature" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="002.jpg" alt="Snow" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="h1.jpeg" alt="Mountains" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="004.jpg" alt="Lights" style="width:360px;height:640px;" onclick="myFunction(this);">
+  </div>
+</div>
+
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div>
+
+<script>
+function myFunction(imgs) {
+  var expandImg = document.getElementById("expandedImg");
+  var imgText = document.getElementById("imgtext");
+  expandImg.src = imgs.src;
+  imgText.innerHTML = imgs.alt;
+  expandImg.parentElement.style.display = "block";
+}
+</script>
+
+        <p>This celebrated temple, at present has separate shrines for Sudharsanar with Yoga Narasimar at the back, Garudar, Krishnar, Vikshwasenar, Adhiseshan, Alwars. Two separate shrines are situated for Sri Vedhavalli Thayar and Sri Perundevi Thayar. Vaiganasa Agamam is being followed here.</p><br />
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 100%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+</style>
+</head>
+<body>
+
+<div style="text-align:center">
+  <h2></h2>
+  <p></p>
+</div>
+
+<!-- The four columns -->
+<div class="row">
+  <div class="column">
+    <img src="kk7.jpeg" alt="" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="kk3.jpeg" alt="" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="sv5.jpeg" alt="" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="kk1.jpeg" alt="" style="width:340px;height:640px;" onclick="myFunction(this);">
+  </div>
+</div>
+
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div>
+
+<script>
+function myFunction(imgs) {
+  var expandImg = document.getElementById("expandedImg");
+  var imgText = document.getElementById("imgtext");
+  expandImg.src = imgs.src;
+  imgText.innerHTML = imgs.alt;
+  expandImg.parentElement.style.display = "block";
+}
+</script>
