--- a/index.html
+++ b/index.html
@@ -408,4 +408,13 @@ function showSlides() {
 </script>
 
 <hr style="height:2px;border-width:0;color:gray;background-color:white">
-     
+      <div class="contentBox">
+    	<div class="innerBox">
+        	<h1>About Temple</h1>
+
+
+          <div class="contentText">
+            <p>Sri Varadharaja Perumal temple is situated in Tirunelveli District, Found at the southern end of Tamil Nadu. This temple is an ancient and reputed Vishnu temple. It lies on the banks of the perennial river Thamarabarani. This area is also known as Veeraraghavapuram, which is the hoary name of this place. It has been named after Veeraraghavan, the main and preceding deity (Moolavar), in Sri Varadharaja Temple. Sri Varadharaja perumal is the Usthava Moorthy. </a></p>
+            <br />
+
+<hr style="height:2px;border-width:0;color:gray;background-color:white"> 
