--- a/index.html
+++ b/index.html
@@ -417,3 +417,38 @@ function showSlides() {
             <br />
 
 <hr style="height:2px;border-width:0;color:gray;background-color:white"> 
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<h2>Images Side by Side</h2>
+<p>How to create side-by-side images with the CSS float property:</p>
+
+<div class="row">
+  <div class="column">
+    <img src="thoon.jpeg" alt="thoon.jpeg" style="width:45%">
+  </div>
+  <div class="column">
+    <img src="r1.jpeg" alt="r1.jpeg" style="width:45%">
+  </div>
+  <div class="column">
+    <img src="gop3.jpeg" alt="gop3.jpeg" style="width:45%">
+  </div>
+</div>
