--- a/index.html
+++ b/index.html
@@ -438,17 +438,16 @@ function showSlides() {
 </head>
 <body>
 
-<h2>Images Side by Side</h2>
-<p>How to create side-by-side images with the CSS float property:</p>
-
+<div style="text-align:center">
+  <h1>Rajagopuram</h1>
 <div class="row">
   <div class="column">
-    <img src="thoon.jpeg" alt="thoon.jpeg" style="width:45%">
+    <img src="thoon.jpeg" alt="thoon.jpeg" style="width:240px;height:240px;">
   </div>
   <div class="column">
-    <img src="r1.jpeg" alt="r1.jpeg" style="width:45%">
+    <img src="r1.jpeg" alt="r1.jpeg" style="width:240px;height:240px;">
   </div>
   <div class="column">
-    <img src="gop3.jpeg" alt="gop3.jpeg" style="width:45%">
+    <img src="gop3.jpeg" alt="gop3.jpeg" style="width:240px;height:240px;">
   </div>
 </div>
