--- a/index.html
+++ b/index.html
@@ -451,3 +451,5 @@ function showSlides() {
     <img src="gop3.jpeg" alt="gop3.jpeg" style="width:240px;height:240px;">
   </div>
 </div>
+ully built and also big mahamandapam with four giant saptaswara pillars was built by replacing the old 16 pillars mandapam the samprokshana took place on 29 May 2013 Wednesday. Thousands of devotees were witnessed it.</p>
+  <hr style="height:2px;border-width:0;color:gray;background-color:white">
