--- a/index.html
+++ b/index.html
@@ -453,3 +453,38 @@ function showSlides() {
 </div>
   <p>Five tiers Rajagopuram was successfully built and also big mahamandapam with four giant saptaswara pillars was built by replacing the old 16 pillars mandapam the samprokshana took place on 29 May 2013 Wednesday. Thousands of devotees were witnessed it.</p>
   <hr style="height:2px;border-width:0;color:gray;background-color:white">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<h2>Images Side by Side</h2>
+<p>How to create side-by-side images with the CSS float property:</p>
+
+<div class="row">
+  <div class="column">
+    <img src="001.jpg" alt="001.jpg" style="width:240px;height:240px;">
+  </div>
+  <div class="column">
+    <img src="002.jpg" alt="002.jpg" style="width:240px;height:240px;">
+  </div>
+  <div class="column">
+    <img src="h1.jpeg" alt="h1.jpeg" style="width:240px;height:240px;">
+  </div>
+</div>
