--- a/index.html
+++ b/index.html
@@ -474,8 +474,7 @@ function showSlides() {
 </head>
 <body>
 
-<h2>Images Side by Side</h2>
-<p>How to create side-by-side images with the CSS float property:</p>
+
 
 <div class="row">
   <div class="column">
@@ -486,5 +485,8 @@ function showSlides() {
   </div>
   <div class="column">
     <img src="h1.jpeg" alt="h1.jpeg" style="width:240px;height:240px;">
+  </div>
+  <div class="column">
+    <img src="004.jpg" alt="004.jpg" style="width:240px;height:240px;">
   </div>
 </div>
