--- a/index.html
+++ b/index.html
@@ -488,3 +488,4 @@ function showSlides() {
   </div>
  
 </div>
+<p>This celebrated temple, at present has separate shrines for Sudharsanar with Yoga Narasimar at the back, Garudar, Krishnar, Vikshwasenar, Adhiseshan, Alwars. Two separate shrines are situated for Sri Vedhavalli Thayar and Sri Perundevi Thayar. Vaiganasa Agamam is being followed here.</p><br />
