--- a/index.html
+++ b/index.html
@@ -489,3 +489,37 @@ function showSlides() {
  
 </div>
 <p>This celebrated temple, at present has separate shrines for Sudharsanar with Yoga Narasimar at the back, Garudar, Krishnar, Vikshwasenar, Adhiseshan, Alwars. Two separate shrines are situated for Sri Vedhavalli Thayar and Sri Perundevi Thayar. Vaiganasa Agamam is being followed here.</p><br />
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<h2>Images Side by Side</h2>
+<p>How to create side-by-side images with the CSS float property:</p>
+
+<div class="row">
+  <div class="column">
+    <img src="kk7.jpeg" alt="kk7.jpeg" style="width:240px;height:240px;">
+  </div>
+  <div class="column">
+    <img src="sv5.jpeg" alt="sv5.jpeg" style="width:240px;height:240px;">
+  <div class="column">
+    <img src="kk3.jpeg" alt="kk3.jpeg" style="width:240px;height:240px;">
+  </div>
+</div>
