--- a/index.html
+++ b/index.html
@@ -519,6 +519,7 @@ function showSlides() {
   </div>
   <div class="column">
     <img src="sv5.jpeg" alt="sv5.jpeg" style="width:240px;height:240px;">
+  </div>
   <div class="column">
     <img src="kk3.jpeg" alt="kk3.jpeg" style="width:240px;height:240px;">
   </div>
