--- a/index.html
+++ b/index.html
@@ -522,3 +522,6 @@ function showSlides() {
     <img src="kk3.jpeg" alt="kk3.jpeg" style="width:240px;height:240px;">
   </div>
 </div>
+<p>Regular pujas (Visvarupam, Kalasanthi, Uchikalam, Sayarakshai and Thiruvisagam) are performed daily. Pujas are performed as per "Sri Vaikanasa baghavat sastra". Every day the moolavar get bathed from the holy tamirabarani water.</p>
+  <hr style="height:2px;border-width:0;color:gray;background-color:white">
+  <h1>Ratham</h1>
