--- a/index.html
+++ b/index.html
@@ -525,3 +525,40 @@ function showSlides() {
 <p>Regular pujas (Visvarupam, Kalasanthi, Uchikalam, Sayarakshai and Thiruvisagam) are performed daily. Pujas are performed as per "Sri Vaikanasa baghavat sastra". Every day the moolavar get bathed from the holy tamirabarani water.</p>
   <hr style="height:2px;border-width:0;color:gray;background-color:white">
   <h1>Ratham</h1>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+
+<div class="row">
+  <div class="column">
+    <img src="ther1.jpeg" alt="ther1.jpeg" style="width:240px;height:240px;">
+  </div>
+  <div class="column">
+    <img src="ther.jpeg" alt="ther.jpeg" style="width:240px;height:240px;">
+  </div>
+  <div class="column">
+    <img src="ther1.jpeg" alt="ther1.jpeg" style="width:240px;height:240px;">
+  </div>
+</div>
+  <div class="contentText">
+    <p>Ratham samarpanam
+Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshmi Vallabha trust with the help of public at May 2015 chitrai brahmosthavam. The car(ratham) is 32 feet height and 13 feet breadth with neally 350 teak wood carvings and has 52 chiming bells in it. A shed is under construction to secure the ratham. </p><br />
+<hr style="height:2px;border-width:0;color:gray;background-color:white"> 
