--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ function showSlides() {
     <img src="ther.jpeg" alt="ther.jpeg" style="width:240px;height:240px;">
   </div>
   <div class="column">
-    <img src="ther1.jpeg" alt="ther1.jpeg" style="width:240px;height:240px;">
+    <img src="ther1.jpeg" alt="ther1.jpeg" style="width:240px;height:240px" onclick="myFunction(this);">
   </div>
 </div>
   <div class="contentText">
