--- a/index.html
+++ b/index.html
@@ -562,3 +562,104 @@ function showSlides() {
     <p>Ratham samarpanam
 Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshmi Vallabha trust with the help of public at May 2015 chitrai brahmosthavam. The car(ratham) is 32 feet height and 13 feet breadth with neally 350 teak wood carvings and has 52 chiming bells in it. A shed is under construction to secure the ratham. </p><br />
 <hr style="height:2px;border-width:0;color:gray;background-color:white"> 
+    <h1>Brahmam Uthsavam</h1>
+    <style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+/* The grid: Four equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 100%;
+  padding: 10px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the expanded image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+</style>
+</head>
+<body>
+
+
+<div style="text-align:center">
+  <h2></h2>
+  <p></p>
+</div>
+
+<!-- The four columns -->
+<div class="row">
+  <div class="column">
+    <img src="bram1.jpeg" alt="Nature" sstyle="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="bram2.jpeg" alt="Snow" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="bram3.jpeg" alt="Mountains" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="bram4.jpeg" alt="Lights" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+ <div class="column">
+    <img src="bram5.jpeg" alt="Lights" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+<div class="column">
+    <img src="bram6.jpeg" alt="Lights" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+<div class="column">
+    <img src="bram7.jpeg" alt="Lights" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+<div class="column">
+    <img src="bram8.jpeg" alt="Lights" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+</div>
+<div class="container">
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+  <img id="expandedImg" style="width:100%">
+  <div id="imgtext"></div>
+</div>
