--- a/index.html
+++ b/index.html
@@ -563,4 +563,50 @@ function showSlides() {
 Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshmi Vallabha trust with the help of public at May 2015 chitrai brahmosthavam. The car(ratham) is 32 feet height and 13 feet breadth with neally 350 teak wood carvings and has 52 chiming bells in it. A shed is under construction to secure the ratham. </p><br />
 <hr style="height:2px;border-width:0;color:gray;background-color:white"> 
     <h1>Brahmam Uthsavam</h1>
-   
+   <style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<h2>Images Side by Side</h2>
+<p>How to create side-by-side images with the CSS float property:</p>
+
+<div class="row">
+  <div class="column">
+    <img src="bram2.jpeg" alt="bram2.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="bram3.jpeg" alt="bram3.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="bram4.jpeg" alt="bram4.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+ <div class="column">
+    <img src="bram5.jpeg" alt="bram5.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+<div class="column">
+    <img src="bram6.jpeg" alt="bram6.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+<div class="column">
+    <img src="bram7.jpeg" alt="bram7.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+<div class="column">
+    <img src="bram8.jpeg" alt="bram8.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
+</div>
