--- a/index.html
+++ b/index.html
@@ -608,4 +608,8 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
 <div class="column">
     <img src="bram8.jpeg" alt="bram8.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
   </div>
+  
+ <div class="column">
+    <img src="bram1.jpeg" alt="bram1.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
+  </div>
 </div>
