--- a/index.html
+++ b/index.html
@@ -613,3 +613,6 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
     <img src="bram1.jpeg" alt="bram1.jpeg" style="width:240px;height:240px;" onclick="myFunction(this);">
   </div>
 </div>
+  <p>Brahmamosthavam is celebrated for 10 days during the Tamil Month Chitarai (Mid of April to Mid of May) ending on Thiruvona Nakshatram for Chakrasnanam. On 5th day 5 Garauda sevai (iyendhu garudasevai) festival takes place with four other deities on their Garudavahanam from the neighbouring temples(Sri Srinivasa perumal, Sri Kariayamanika perumal, Sri Lakshmi Narasima perumal and Sri Rajagopala perumal). ther festival is celebrated on the 9th day.</p><br />
+        
+           <hr style="height:2px;border-width:0;color:gray;background-color:white">
