--- a/index.html
+++ b/index.html
@@ -616,3 +616,9 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
   <p>Brahmamosthavam is celebrated for 10 days during the Tamil Month Chitarai (Mid of April to Mid of May) ending on Thiruvona Nakshatram for Chakrasnanam. On 5th day 5 Garauda sevai (iyendhu garudasevai) festival takes place with four other deities on their Garudavahanam from the neighbouring temples(Sri Srinivasa perumal, Sri Kariayamanika perumal, Sri Lakshmi Narasima perumal and Sri Rajagopala perumal). ther festival is celebrated on the 9th day.</p><br />
         
            <hr style="height:2px;border-width:0;color:gray;background-color:white">
+  <h1>Athyayana Uthsavam</h1>
+<p>Athyayana Uthsavam is celebrated for 21 days. Usthavar is adorned in different Thirukolams(Decorations). Nalayara Dhivya Prabandham is chanted on all these 21 days and on the 21st day is the Vaigunda Ekadesi festival is completed by performing Veedupadi veedu. On the day of Vaigunda Ekadesi the Usthavar is adorned in sayanakolam. That evening Sorgavasal festival is celebrated.</p></div>
+         <hr style="height:2px;border-width:0;color:gray;background-color:white">
+ <h1>other Uthsavam</h1>
+          <p>Hanuman Jayanthi festival is celebrated for 10days during Marhazi ending on Moola Nakshatram (Amavasya) with Pushpanjali. 7 days of Thailiakappu utsavam for Thayar in margazhi,7 days of Pavithrothsavam in the month of Aavani, All Saturdays of the Tamil month Purratasi are celebrated with Garudaseva. Navarathri also celebrated in the same month. Five </p><br />
+          <img src="ut.jpeg" alt="kovil" style="width:360px;height:640px;">
