--- a/index.html
+++ b/index.html
@@ -622,3 +622,18 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
  <h1>other Uthsavam</h1>
           <p>Hanuman Jayanthi festival is celebrated for 10days during Marhazi ending on Moola Nakshatram (Amavasya) with Pushpanjali. 7 days of Thailiakappu utsavam for Thayar in margazhi,7 days of Pavithrothsavam in the month of Aavani, All Saturdays of the Tamil month Purratasi are celebrated with Garudaseva. Navarathri also celebrated in the same month. Five </p><br />
           <img src="ut.jpeg" alt="kovil" style="width:1300px;height:240px;">
+<!-- Footer -->
+
+}
+</style>
+</head>
+<body>
+
+<div class="navbar">
+<footer class="w3-center w3-black w3-padding-16">
+  <p>Copyrights@2020<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green"></a></p>
+</footer>
+
+
+</body>
+</html>
