--- a/index.html
+++ b/index.html
@@ -623,6 +623,16 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
           <p>Hanuman Jayanthi festival is celebrated for 10days during Marhazi ending on Moola Nakshatram (Amavasya) with Pushpanjali. 7 days of Thailiakappu utsavam for Thayar in margazhi,7 days of Pavithrothsavam in the month of Aavani, All Saturdays of the Tamil month Purratasi are celebrated with Garudaseva. Navarathri also celebrated in the same month. Five </p><br />
           <img src="ut.jpeg" alt="kovil" style="width:860px;height:240px;">
   </div>
+    
+
+
+
+
+
+    </div>
+  </div>
+</div>
+
 <!-- Footer -->
 
 
