--- a/gal4.html
+++ b/gal4.html
@@ -270,3 +270,359 @@ html {
       }, 1000); 
     </script>
   </body>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<h1 style="text-align:center">GALLERY</h1>
+
+<div class="row">
+  <div class="column">
+    <img src="222 (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+  <div class="column">
+    <img src="222 (2).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="222 (3).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="222 (4).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (5).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (6).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (7).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (8).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (9).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (10).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (11).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (12).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (13).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (14).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (15).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (16).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (17).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(17)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (18).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(18)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (19).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(19)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (20).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(20)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (21).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(21)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (22).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(22)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (23).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(23)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (24).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(24)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (25).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(25)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (26).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(26)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (27).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(27)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (28).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(28)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (29).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(29)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (30).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(30)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (31).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(31)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (32).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(32)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="222 (33).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(33)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (34).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(34)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (35).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(35)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (36).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(36)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (37).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(37)" class="hover-shadow cursor">
+</div>
+ <div class="column">
+    <img src="222 (38).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(38)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="sv1.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(39)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="sv2.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(40)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="sv3.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(41)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="sv4.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(42)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="sv5.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(43)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="sv6.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(44)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="sv7.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(45)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(46)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (2).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(46)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (3).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(48)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (4).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(49)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (5).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(50)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (6).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(51)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (7).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(52)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (8).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(53)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (9).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(54)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (10).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(55)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (11).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(56)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (12).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(57)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (13).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(58)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (14).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(59)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (15).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(60)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (16).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(61)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (17).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(62)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (18).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(63)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (19).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(64)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (20).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(65)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (21).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(66)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (22).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(67)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (23).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(68)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (24).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(69)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (25).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(70)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (26).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(71)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (27).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(72)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (28).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(73)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (29).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(74)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (30).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(75)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (31).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(76)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (32).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(77)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (33).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(78)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (34).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(79)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (35).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(80)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (36).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(81)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (37).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(82)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (38).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(83)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (39).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(84)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (40).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(85)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (41).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(86)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (42).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(87)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (43).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(88)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (44).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(89)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (45).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(90)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (46).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(91)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (47).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(92)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (48).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(93)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (49).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(94)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (50).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(95)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (51).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(96)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (52).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(97)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (53).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(99)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (54).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(100)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (55).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(101)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (56).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(102)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (57).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(103)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (58).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(104)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (59).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(105)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (60).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(106)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (61).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(107)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (62).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(108)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (63).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(109)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (64).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(110)" class="hover-shadow cursor">
+</div>
+<div class="column">
+    <img src="000 (65).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(111)" class="hover-shadow cursor">
+</div>
+</div>
+  </div>
