--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ body{
 <body>
 <div class="navbar">
   <a href="index.html">HOME</a>
-  <a href="gal4.html">GALLERY</a>
+  <a href="g.html">GALLERY</a>
 <a href="#">BRAMHOSTAVAM</a>
 <a href="#">VIDEOS</a>
 <a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
