--- a/g.html
+++ b/g.html
@@ -170,7 +170,7 @@ body{
 <body>
 <div class="navbar">
   <a href="index.html">HOME</a>
-  <a href="gal4.html">GALLERY</a>
+  <a href="g.html">GALLERY</a>
 <a href="#">BRAMHOSTAVAM</a>
 <a href="#">VIDEOS</a>
 <a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
@@ -247,7 +247,7 @@ html {
 <body>
 
 <div class="header">
-   <a href="live.html"><h1>Live Dharshan</h1></a>
+   <a href="l.html"><h1>Live Dharshan</h1></a>
 </div>
   <head>
 <title>GALLERY</title>
