--- a/l.htm
+++ b/l.htm
@@ -221,11 +221,17 @@ html {
   </body>
 <h1>live coming soon..</h1>
 
-<video width="1000" height="640" autoplay>
+<body>
+
+<video width="320" height="240" autoplay>
   <source src="wt.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
 
+<p><b>Note:</b> The autoplay attribute does not work on some mobile devices.</p>
+
+</body>
 <!-- Footer -->
 .dropdown:hover .dropdown-content {
   display: block;
