--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -270,7 +270,29 @@ html {
       }, 1000); 
     </script>
   </body>
-<h1 style="text-align:center">Thamirabharani Mahapushkaram 2018</h1>
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
+</head>
+<body>
+
+<h2>Images Side by Side</h2>
+<p>How to create side-by-side images with the CSS float property:</p>
 
 <div class="row">
   <div class="column">
