--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -291,8 +291,9 @@ html {
 </head>
 <body>
 
-<h2>Images Side by Side</h2>
-<p>How to create side-by-side images with the CSS float property:</p>
+<h1 style="text-align:center">Thamirabharani Mahapushkaram 2018</h1>
+
+<p></p>
 
 <div class="row">
   <div class="column">
