--- a/l.htm
+++ b/l.htm
@@ -219,23 +219,22 @@ html {
       }, 1000); 
     </script>
   </body>
+<style>
+
+html { 
+  background-color: green; 
+  background-size: cover;
+}
+</style>
 <h1>live coming soon..</h1>
 
-<body>
-
-<video width="320" height="240" autoplay>
+<video width="340px" height="740px" autoplay>
   <source src="wt.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
   Your browser does not support the video tag.
 </video>
 
-<p><b>Note:</b> The autoplay attribute does not work on some mobile devices.</p>
-
-</body>
 <!-- Footer -->
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+
 </style>
 </head>
 <body>
