--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@ html {
 
 <div class="col-9">
     <h1>Varadharaja perumal</h1>
-    <p>"srI lakshmi vallabhArambhAm viKhanO muni madhyamAm |
-         asmadAchArya paryantAm vandE guru paramparAm ||"</p>
+    <p>"srI lakshmi vallabhArambhAm viKhanO muni madhyamAm | asmadAchArya paryantAm vandE guru paramparAm ||"</p>
     <p></p>
 </div>
 <style>
