--- a/l.htm
+++ b/l.htm
@@ -219,22 +219,17 @@ html {
       }, 1000); 
     </script>
   </body>
-<style>
-
-html { 
-  background-color: green; 
-  background-size: cover;
-}
-</style>
 <h1>live coming soon..</h1>
 
-<video width="340px" height="740px" autoplay>
+<video width="1000" height="640" autoplay>
   <source src="wt.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
 <!-- Footer -->
-
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 </style>
 </head>
 <body>
