--- a/gal.html
+++ b/gal.html
@@ -8,16 +8,22 @@
 }
 </style>
 <style>
-html { 
-  background-color: "; 
-  background-size: cover;
+div class
+{
+margin-top: 25px;
+margin-bottom: 25px;
+  margin-right: 50px;
+  margin-left: 80px;
 }
-
-body { 
-  color: white; 
+<style>
+{
+margin-top: 25px;
+margin-bottom: 25px;
+  margin-right: 50px;
+  margin-left: 80px;
 }
 </style>
-<title>CSS Website Layout</title>
+<title>Nellai Varadharaja Perumal Kovil</title>
 <style> 
 #example1 {
   background-image: url(), url(.jpg);
@@ -32,14 +38,14 @@ body {
 h1 {
   color: gold;
   font-family: Lucida Console;
-  font-size: 300%;
+  font-size: 150%;
 text-align: center;
 text-shadow: 2px 2px 4px #000000;
 }
 p  {
   color: white;
   font-family: courier;
-  font-size: 160%;
+  font-size: 90%;
 text-align: center;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -94,7 +100,7 @@ body{
   background-clip: content-box;
 }
 </style>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=1300px" initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 .navbar {
@@ -105,7 +111,7 @@ body{
 
 .navbar a {
   float: left;
-  font-size: 16px;
+  font-size: 9px;
   color: white;
   text-align: center;
   padding: 14px 16px;
@@ -120,7 +126,7 @@ body{
 }
 
 .dropdown .dropbtn {
-  font-size: 16px;  
+  font-size: 9px;  
   border: none;
   outline: none;
   color: white;
@@ -163,11 +169,11 @@ body{
 </head>
 <body>
 <div class="navbar">
-  <a href="header.html">HOME</a>
-  <a href="gal.html">GALLERY</a>
+  <a href="index.html">HOME</a>
+  <a href="gal4.html">GALLERY</a>
 <a href="#">BRAMHOSTAVAM</a>
-<a href="#">THER THIRUNAL</a>
-<a href="samprokshanam.html">SAMPROKSHANAM 1997</a>
+<a href="#">VIDEOS</a>
+<a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
 <a href="mahapushkaram.html">MAHAPUSHKARAM 2018</a>
 <a href="">SAMPROKSHANAM 2013</a>
 <a href="contactus.html">CONTACT US </a>
@@ -185,27 +191,6 @@ body{
 
 </style>
 </style>
-<head>
-<title>Title of the document</title>
-    <style>
-    #blink{
-      font-size: 30px;
-      font-weight: bold;
-      font-family: sans-serif;
-      color: #1c87c9;
-      transition:0.2s;
-    }
-   </style>
-  </head>
-  <body>
-    <a href="gal.html"> <p id="blink">Gallery</p></a>
-    <script type="text/javascript">
-      var blink = document.getElementById('blink');
-      setInterval(function() {
-         blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
-      }, 1000); 
-    </script>
-  </body>
 
 
 <style>
@@ -213,7 +198,29 @@ html {
   background-color: green; 
   background-size: cover;
 }
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>GALLERY</title>
+    <style>
+    #blink{
+      font-size: 25px;
+      font-weight: bold;
+      font-family: sans-serif;
+      color: #ffcc00;
+      transition:0.2s;
+    }
+   </style>
+  </head>
+  <body>
+    <a href="gal.html"> <p id="blink">New Gallery</p></a>
+    <script type="text/javascript">
+      var blink = document.getElementById('blink');
+      setInterval(function() {
+         blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
+      }, 1000); 
+    </script>
+  </body>
+<style>
+
 <style>
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
@@ -381,9 +388,7 @@ function showSlides(n) {
 `
 
 <!-- Footer -->
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+
 </style>
 </head>
 <body>
