--- a/index.html
+++ b/index.html
@@ -632,7 +632,10 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
     </div>
   </div>
 </div>
-
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7649360&style=0006&nbdigits=9&type=page&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
+</a>            
 <!-- Footer -->
 
 
