--- a/index.html
+++ b/index.html
@@ -632,10 +632,19 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
     </div>
   </div>
 </div>
+div {
+  width: 70px;
+  height: 300px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+}
 <!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7649360&style=0006&nbdigits=9&type=page&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
-</a>            
+</a>  
+</div>
 <!-- Footer -->
 
 
