--- a/index.html
+++ b/index.html
@@ -632,7 +632,8 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
     </div>
   </div>
 </div>
-div {
+<style> 
+#main {
   width: 70px;
   height: 300px;
   border: 1px solid #c3c3c3;
@@ -640,10 +641,30 @@ div {
   flex-wrap: wrap;
   align-content: center;
 }
-<!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
+
+#main div {
+  width: 70px;
+  height: 70px;
+}
+</style>
+</head>
+<body>
+
+<h1><a href="https://www.hitwebcounter.com" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=7649360&style=0006&nbdigits=9&type=page&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
-</a>  
+</a>  </h1>
+
+<div id="main">
+  <div style="background-color:coral;"></div>
+  <div style="background-color:lightblue;"></div>
+  <div style="background-color:pink;"></div>
+</div>
+
+<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support the align-content property.</p>
+
+</body>
+<!-- hitwebcounter Code START -->
+
 </div>
 <!-- Footer -->
 
