--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
 </a>  </h1>
 
 
-<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support the align-content property.</p>
+<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support this site.</p>
 
 </body>
 <!-- hitwebcounter Code START -->
