--- a/samprokshanam.html
+++ b/samprokshanam.html
@@ -270,9 +270,37 @@ html {
       }, 1000); 
     </script>
   </body>
+<style> 
+#main {
+  width: 70px;
+  height: 300px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+}
 
-<iframe width="800" height="450" src="https://www.youtube.com/embed/HiJhnjwJ2h0?start=6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- 
+#main div {
+  width: 70px;
+  height: 70px;
+}
+</style>
+</head>
+<body>
+
+<h1><iframe width="800" height="450" src="https://www.youtube.com/embed/HiJhnjwJ2h0?start=6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ </h1>
+
+<div id="main">
+  <div style="background-color:coral;"></div>
+  <div style="background-color:lightblue;"></div>
+  <div style="background-color:pink;"></div>
+</div>
+
+<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support the align-content property.</p>
+
+</body>
+
 <!-- Footer -->
 
 }
