--- a/samprokshanam.html
+++ b/samprokshanam.html
@@ -291,13 +291,8 @@ html {
 <h1><iframe width="800" height="450" src="https://www.youtube.com/embed/HiJhnjwJ2h0?start=6" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </h1>
 
-<div id="main">
-  <div style="background-color:coral;"></div>
-  <div style="background-color:lightblue;"></div>
-  <div style="background-color:pink;"></div>
-</div>
 
-<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support the align-content property.</p>
+<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support this site</p>
 
 </body>
 
