--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ text-align: center;
 </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="r(5).jpeg" style="width:640px;height:380px;">
+  <img src="rs.jpeg" style="width:640px;height:380px;">
   <div class="text">Caption Two</div>
   </div>
 </div>
