--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ html {
   background-size: cover;
 }
 </style>
-
+<meta name="viewport" content=""width=1300" initial-scale=1.0">
 <style>
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
