--- a/contactus.html
+++ b/contactus.html
@@ -193,83 +193,6 @@ body{
 </style>
 
 
-<style>
-html { 
-  background-color: green; 
-  background-size: cover;
-}
-<meta name="viewport" content="width=1300px" initial-scale=1.0">
-<style>
-body {
-  font-family: Verdana, sans-serif;
-  margin: 0;
-}
-* {
-  box-sizing: border-box;
-}
-
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-}
-
-html {
-  font-family: "Lucida Sans", sans-serif;
-}
-
-.header {
-  background-color: #9933cc;
-  color: #ffffff;
-  padding: 10px;
-}
-
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.menu li {
-  padding: 1px;
-  margin-bottom: 9px;
-  background-color: #33b5e5;
-  color: #ffffff;
-  box-shadow: 0 11px 10px rgba(0,0,0,0.12), 0 11px 22px rgba(0,0,0,0.24);
-}
-
-.menu li:hover {
-  background-color: #0099cc;
-}
-</style>
-</head>
-<body>
-
-<div class="header">
-   <a href="l.html"><h1>Live Dharshan</h1></a>
-</div>
-  <head>
-<title>GALLERY</title>
-    <style>
-    #blink{
-      font-size: 9px;
-      font-weight: bold;
-      font-family: sans-serif;
-      color: #ffcc00;
-      transition:0.2s;
-    }
-   </style>
-  </head>
-  <body>
-    <a href="gal.html"> <p id="blink">New Gallery</p></a>
-    <script type="text/javascript">
-      var blink = document.getElementById('blink');
-      setInterval(function() {
-         blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
-      }, 1000); 
-    </script>
-  </body>
 
 <style>
 html { 
@@ -359,7 +282,7 @@ html {
 
   <div class="column">
     <div class="card">
-     <<img src="sri.jpeg" alt="" style="width:300px;height:280px;">
+     <<img src="sri.jpeg" alt="" style="width:25px;height:25px;">
       <div class="container">
         <h2>Sridhar Bhattachar</h2>
         <p class=""></p>
@@ -371,8 +294,8 @@ html {
   </div>
   
   <div class="column">
-    <div class="card">
-      <<img src="ramesh.jpeg" alt="" style="width:300px;height:280px;">
+    <div class="card"
+      <<img src="ramesh.jpeg" alt="" style="width:25px;height:25px;">
       <div class="container">
         <h2>Govindharajan Bhattachar</h2>
         <p class="title"></p>
