--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@ margin-bottom: 25px;
 }
 </style>
 <title>Nellai Varadharaja Perumal Kovil</title>
+  <!-- HTML code to add icon in the title bar -->
+<!DOCTYPE html> 
+<html> 
+	<head> 
+		<meta charset = "utf-8" /> 
+		
+		<title> 
+			GeeksforGeeks icon 
+		</title> 
+		
+		<!-- add icon link -->
+		<link rel = "icon" href = 
+"000 (58).jpeg"
+		type = "image/x-icon"> 
+		
+	</head> 
+	
 <style> 
 #example1 {
   background-image: url(), url(.jpg);
