--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ html {
 <body>
 
 <div class="header">
-   <a href="lv.html"><h1>Live Dharshan</h1></a>
+   <a href="lv.html"><h1><i class='fas fa-gopuram' style='font-size:48px;color:red'></i>Live Dharshan</h1></a>
 </div>
   <head>
 <title>GALLERY</title>
