--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ body{
 <body>
 <div class="navbar">
   <a href="index.html">HOME</a>
-  <a href="g.html">GALLERY</a>
+  <a href="g.html"><i class='fas fa-gopuram'></i>GALLERY</a>
 <a href="#">BRAMHOSTAVAM</a>
 <a href="#">VIDEOS</a>
 <a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
