--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ body{
 </head>
 <body>
 <div class="navbar">
-  <a href="index.html">HOME</a>
-  <a href="g.html"><i class='fas fa-gopuram'></i>GALLERY</a>
+  <a href="index.html"><i class='fas fa-gopuram' style='font-size:24px'></i>HOME</a>
+  <a href="g.html"><i class='fas fa-gopuram' style='font-size:24px'></i></i>GALLERY</a>
 <a href="#">BRAMHOSTAVAM</a>
 <a href="#">VIDEOS</a>
 <a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
