--- a/lv.html
+++ b/lv.html
@@ -169,14 +169,14 @@ body{
 </head>
 <body>
 <div class="navbar">
-  <a href="index.html">HOME</a>
-  <a href="gal4.html">GALLERY</a>
-<a href="#">BRAMHOSTAVAM</a>
-<a href="#">VIDEOS</a>
-<a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
-<a href="mahapushkaram.html">MAHAPUSHKARAM 2018</a>
-<a href="">SAMPROKSHANAM 2013</a>
-<a href="contactus.html">CONTACT US </a>
+  <a href="index.html"><i class='fas fa-gopuram' style='font-size:24px'></i>HOME</a>
+  <a href="g.html"><i class='fas fa-gopuram' style='font-size:24px'></i></i>GALLERY</a>
+<a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>BRAMHOSTAVAM</a>
+<a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>VIDEOS</a>
+<a href="samprokshanam.html"><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 1995</a>
+<a href="mahapushkaram.html"><i class='fas fa-gopuram' style='font-size:24px'></i>MAHAPUSHKARAM 2018</a>
+<a href=""><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 2013</a>
+<a href="contactus.html"><i class='fas fa-gopuram' style='font-size:24px'></i>CONTACT US </a>
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
